--- a/index.css
+++ b/index.css
@@ -31,9 +31,8 @@
     font-size: 18px;
 
 }
-}
-* 
-{
+
+* {
     margin: 0;
     padding: 0;
     
@@ -45,6 +44,7 @@ body
     background-color: rgb(237, 252, 252);
     
 }
+
 
 .productmain {
     width: 100%;
@@ -65,6 +65,7 @@ body
     box-shadow: 0 2px 10px rgb(105, 105, 105);
 
 }
+
 
 .mainheading>h4 {
     line-height: 23px !important;
@@ -303,3 +304,5 @@ input[type="number"]::placeholder {
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
 }
+
+
